Redefine scripted test